updated avatar picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "BPR Project"
-  avatar           : "https://ncatregister.com/wp-content/uploads/2019/02/NCAT-Aggie.jpg"
+  avatar           : "https://cdn.d1baseball.com/logos/teams/256/ncat.png"
   bio              : # "MATH 224"
   location         : # "Mateena Hall"
   employer         :
