update config.yml file

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "NCA&T - NSF: Math LSI Project"
+  name             : "Math LSI Project"
   avatar           : "ncat-nsf-logo.png"
   bio              : # "MATH LSI"
   location         : # "Mateena Hall"
