--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "Faculty Workshops"
+  - title: "LSI Workshops"
     url: /workshops/
 
    
