--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Math Learning-Strategy Instruction"
 title_separator          : " "
 name                     : &name "Learning-Strategy Instruction"
 description              : &description "personal description"
-url                      : https://BPRProject.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mathlsincat.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mathlsincat/mathlsincat.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
