--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :  "IntroToStatNCAT/BPRProject.github.io"
+  github           :  "mathlsincat/mathlsincat.github.io"
   google_plus      :
   keybase          :
   instagram        :
